fix dropdown alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,3 @@
 @import "bootstrap";
 .titleArea-logo { width:24px; height: 24px;}
-
+.place-items-center { place-items: center; }
